public/styles/main.css
.semantic-eye-title {
  padding-bottom: 3rem;

  display: grid;
  justify-items: center;
  row-gap: 2em;
}

.title-img {
  min-width: 200px;
  width: 60%;
  max-width: 600px;

}

.take-away {
  color: var(--clr-primary);
  background-color: var(--clr-secondary);
}

/* ------ */
h1,
h2,
h3 {
  color: var(--clr-accent);
}

h1,
h2,
h3 {
  text-align: center;
  margin-top: 4rem;

}

h2, h3 {
  margin-top: 2rem;
  margin-bottom: 1rem;
}

p {
  margin-top: 0.5rem;
  text-align: center;
}

li > p {
  text-align: start;
}

/* ------ */
.first-chapter, .chapter {
  padding-top:0;
  padding-bottom: 2rem;
  
  display: grid;
  justify-items: center;
}

.chapter {
  border-top-width: 1px;
  border-top-style: solid;
  border-top-color: var(--clr-secondary);
}

.maniculed-hint {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 1rem;

  text-align: center;
  font-weight: normal;
  /* color: var(--clr-secondary); */

  img {
    height: 1.5rem;
  }
}

.subtitle,
.take-away {
  font-size: 1.2rem;
  padding: 0.8rem 1.6rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  justify-self: center;
  font-weight: normal;
  text-align: center;
}
.subtitle {
  color: var(--clr-primary);
  background-color: var(--clr-dark-ligher);

}

/* ------ */
.image-full-width {
  min-width: 250px;
  margin-top: 2rem;
  margin-bottom: 2rem;
  margin-inline: auto;

  p {
    margin-top: 0.6rem;
    font-size: 1rem;
    line-height: 1.6rem;
    text-align: center;
  }
}

.image-with-caption {
  display: grid;
  justify-items: center;
  min-width: 250px;
  /* max-width: 520px; */
  margin-top: 1rem;
  margin-bottom: 1rem;
  /* margin-inline: auto; */

  img {
    background-color: var(--clr-light);
    padding: 5px;
  }

  p {
    margin-top: 0.6rem;
    font-size: 1rem;
    line-height: 1.6rem;
    text-align: center;
  }
}

.multi-column-text, .two-column-text {
  display: grid;
  grid-template-columns: minmax(500px, 700px);
  margin-top: 1rem;
  margin-bottom: 1rem;

  p {
    text-align: justify;
  }
}

/* ------ */
@media (min-width: 1088px) {
  .multi-column-text {
	  gap: 24px;
	  grid-template-columns:
		repeat(auto-fit, minmax(500px, 1fr));
  }
  .two-column-text {
	  gap: 24px;
	  grid-template-columns:
		500px 500px;
    margin-inline: auto;
  }
}

/* ------ */
.flip-card {
  background-color: transparent;
  width: 300px;
  height: 300px;
  border: 1px solid red;
  perspective: 1000px;
  /* Remove this if you don't want the 3D effect */
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

/* Do a horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  /* Safari */
  backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: #bbb;
  color: black;
}

/* Style the back side */
.flip-card-back {
  background-color: black;
  color: white;
  transform: rotateY(180deg);
}

